<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"

    android:background="#e0e0e0"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/label_icon"
                android:src="@drawable/ic_label_black_18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/label"
                android:textAppearance="?textAppearanceListItem"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/label_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:text="@string/nolabel"
                android:textAppearance="?textAppearanceListItem"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/edit_label_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:background="#e0e0e0"
                android:contentDescription="@string/edit_label"
                android:src="@drawable/ic_edit_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/color_icon"
                android:src="@drawable/ic_color_lens_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/color"
                android:textAppearance="?textAppearanceListItem"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:paddingBottom="32dp">


            <ImageButton
                android:id="@+id/imageButton_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/roundbutton"
                android:contentDescription="@string/blue"
                android:padding="1dp" />

            <ImageButton
                android:id="@+id/imageButton_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/roundbutton"
                android:contentDescription="@string/green"
                android:padding="1dp" />

            <ImageButton
                android:id="@+id/imageButton_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/roundbutton"
                android:contentDescription="@string/yellow"
                android:padding="1dp" />

            <ImageButton
                android:id="@+id/imageButton_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/roundbutton"
                android:contentDescription="@string/orange"
                android:padding="1dp" />

            <ImageButton
                android:id="@+id/imageButton_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/roundbutton"
                android:contentDescription="@string/purple"
                android:padding="1dp" />

        </LinearLayout>


    </LinearLayout>

</FrameLayout>